crates/pina_macros/src/snapshots/pina_macros__tests__event_basic.snap
---
source: crates/pina_macros/src/tests.rs
expression: output
---
#[repr(C)]
#[builder(builder_method(vis = "", name = __builder))]
#[derive(
    ::pina::TypedBuilder,
    ::core::clone::Clone,
    ::core::marker::Copy,
    ::core::cmp::PartialEq,
    ::core::cmp::Eq,
    ::core::fmt::Debug
)]
pub struct TransferEvent {
    discriminator: [u8; EventDisc::BYTES],
    pub from: [u8; 32],
    pub to: [u8; 32],
    pub amount: PodU64,
}
#[allow(dead_code)]
type TransferEventBuilderType = TransferEventBuilder<
    (([u8; EventDisc::BYTES],), (), (), ()),
>;
const __TRANSFEREVENT_ALIGNMENT_ASSERTIONS__: () = {
    ::core::assert!(
        ::core::mem::align_of:: < [u8; EventDisc::BYTES] > () == 1,
        concat!("The alignment of field `", "discriminator", "` with type `",
        stringify!([u8; EventDisc::BYTES]),
        "` should be one. Consider using one of the exported `Pod*` types from the `pina` crate.")
    );
    ::core::assert!(
        ::core::mem::align_of:: < [u8; 32] > () == 1, concat!("The alignment of field `",
        "from", "` with type `", stringify!([u8; 32]),
        "` should be one. Consider using one of the exported `Pod*` types from the `pina` crate.")
    );
    ::core::assert!(
        ::core::mem::align_of:: < [u8; 32] > () == 1, concat!("The alignment of field `",
        "to", "` with type `", stringify!([u8; 32]),
        "` should be one. Consider using one of the exported `Pod*` types from the `pina` crate.")
    );
    ::core::assert!(
        ::core::mem::align_of:: < PodU64 > () == 1, concat!("The alignment of field `",
        "amount", "` with type `", stringify!(PodU64),
        "` should be one. Consider using one of the exported `Pod*` types from the `pina` crate.")
    );
    ::core::assert!(
        ::core::mem::align_of:: < TransferEvent > () == 1,
        concat!("The alignment of struct `", stringify!(TransferEvent),
        "` should be one so it can be used for zero-copy casts.")
    );
    ::core::assert!(
        ::core::mem::size_of:: < TransferEvent > () == (0usize + ::core::mem::size_of:: <
        [u8; EventDisc::BYTES] > () + ::core::mem::size_of:: < [u8; 32] > () +
        ::core::mem::size_of:: < [u8; 32] > () + ::core::mem::size_of:: < PodU64 > ()),
        concat!("`", stringify!(TransferEvent),
        "` layout is padded. `#[pina]` discriminator-first zero-copy layouts must be tightly packed.")
    );
};
impl TransferEvent {
    pub fn to_bytes(&self) -> <Self as ::pina::PinaToBytes>::Bytes {
        <Self as ::pina::PinaToBytes>::to_bytes(self)
    }
    pub fn try_from_bytes(data: &[u8]) -> Result<&Self, ::pina::ProgramError> {
        if data.len() != ::core::mem::size_of::<Self>() {
            return Err(::pina::ProgramError::InvalidInstructionData);
        }
        <Self as ::pina::ZeroPodFixed>::from_bytes(data)
            .map_err(|_| ::pina::ProgramError::InvalidInstructionData)
    }
    pub fn builder() -> TransferEventBuilderType {
        let mut bytes = [0u8; EventDisc::BYTES];
        <Self as ::pina::HasDiscriminator>::VALUE.write_discriminator(&mut bytes);
        Self::__builder().discriminator(bytes)
    }
}
impl ::pina::HasDiscriminator for TransferEvent {
    type Type = EventDisc;
    const VALUE: Self::Type = EventDisc::TransferEvent;
}
const _: fn() = || {
    fn assert_zc_elem<T: ::pina::ZcElem>() {}
    assert_zc_elem::<[u8; EventDisc::BYTES]>();
    assert_zc_elem::<[u8; 32]>();
    assert_zc_elem::<[u8; 32]>();
    assert_zc_elem::<PodU64>();
};
impl ::pina::PinaSerialize for TransferEvent {
    fn write_bytes(&self, output: &mut [u8]) {
        ::core::assert!(output.len() == ::core::mem::size_of:: < Self > ());
        output.fill(0);
        let mut offset = 0usize;
        let field_size = ::core::mem::size_of::<[u8; EventDisc::BYTES]>();
        <[u8; EventDisc::BYTES] as ::pina::PinaSerialize>::write_bytes(
            &self.discriminator,
            &mut output[offset..offset + field_size],
        );
        offset += field_size;
        let field_size = ::core::mem::size_of::<[u8; 32]>();
        <[u8; 32] as ::pina::PinaSerialize>::write_bytes(
            &self.from,
            &mut output[offset..offset + field_size],
        );
        offset += field_size;
        let field_size = ::core::mem::size_of::<[u8; 32]>();
        <[u8; 32] as ::pina::PinaSerialize>::write_bytes(
            &self.to,
            &mut output[offset..offset + field_size],
        );
        offset += field_size;
        let field_size = ::core::mem::size_of::<PodU64>();
        <PodU64 as ::pina::PinaSerialize>::write_bytes(
            &self.amount,
            &mut output[offset..offset + field_size],
        );
        offset += field_size;
        ::core::debug_assert!(offset == output.len());
    }
}
impl ::pina::PinaToBytes for TransferEvent {
    type Bytes = [u8; ::core::mem::size_of::<TransferEvent>()];
    fn zeroed_bytes() -> Self::Bytes {
        [0u8; ::core::mem::size_of::<TransferEvent>()]
    }
}
impl ::pina::ZcValidate for TransferEvent {
    fn validate_ref(value: &Self) -> Result<(), ::pina::ZeroPodError> {
        <[u8; EventDisc::BYTES] as ::pina::ZcValidate>::validate_ref(
            &value.discriminator,
        )?;
        <[u8; 32] as ::pina::ZcValidate>::validate_ref(&value.from)?;
        <[u8; 32] as ::pina::ZcValidate>::validate_ref(&value.to)?;
        <PodU64 as ::pina::ZcValidate>::validate_ref(&value.amount)?;
        Ok(())
    }
}
#[allow(unsafe_code)]
unsafe impl ::pina::ZcElem for TransferEvent {}
impl ::pina::ZeroPodSchema for TransferEvent {
    const LAYOUT: ::pina::LayoutKind = ::pina::LayoutKind::Fixed;
}
impl ::pina::ZeroPodFixed for TransferEvent {
    type Zc = TransferEvent;
    const SIZE: usize = ::core::mem::size_of::<TransferEvent>();
    fn from_bytes(data: &[u8]) -> Result<&Self::Zc, ::pina::ZeroPodError> {
        <Self as ::pina::ZeroPodFixed>::validate(data)?;
        Ok(unsafe { &*(data.as_ptr() as *const Self::Zc) })
    }
    fn from_bytes_mut(data: &mut [u8]) -> Result<&mut Self::Zc, ::pina::ZeroPodError> {
        <Self as ::pina::ZeroPodFixed>::validate(data)?;
        Ok(unsafe { &mut *(data.as_mut_ptr() as *mut Self::Zc) })
    }
    fn validate(data: &[u8]) -> Result<(), ::pina::ZeroPodError> {
        if data.len() < Self::SIZE {
            return Err(::pina::ZeroPodError::BufferTooSmall);
        }
        let zc = unsafe { &*(data.as_ptr() as *const Self::Zc) };
        <Self::Zc as ::pina::ZcValidate>::validate_ref(zc)?;
        Ok(())
    }
    unsafe fn from_bytes_unchecked(data: &[u8]) -> &Self::Zc {
        &*(data.as_ptr() as *const Self::Zc)
    }
    unsafe fn from_bytes_mut_unchecked(data: &mut [u8]) -> &mut Self::Zc {
        &mut *(data.as_mut_ptr() as *mut Self::Zc)
    }
}
impl ::pina::ZcField for TransferEvent {
    type Pod = TransferEvent;
    const POD_SIZE: usize = ::core::mem::size_of::<TransferEvent>();
}
