crates/pina_macros/src/snapshots/pina_macros__tests__event_with_path_variant.snap
---
source: crates/pina_macros/src/tests.rs
expression: output
---
#[derive(::pina::zeropod::ZeroPod)]
pub struct InitializeEvent {
    discriminator: [u8; EventKind::BYTES],
    pub choice: u8,
}
impl InitializeEvent {
    /// The exact number of bytes required by the zeropod representation.
    pub const SIZE: usize = <Self as ::pina::ZeroPodFixed>::SIZE;
    /// Validate `data` and return zeropod's immutable zero-copy companion.
    pub fn try_from_bytes(
        data: &[u8],
    ) -> Result<&<Self as ::pina::ZeroPodFixed>::Zc, ::pina::ProgramError> {
        if data.len() != Self::SIZE
            || !<Self as ::pina::HasDiscriminator>::matches_discriminator(data)
        {
            return Err(::pina::ProgramError::InvalidInstructionData);
        }
        <Self as ::pina::ZeroPodFixed>::from_bytes(data)
            .map_err(|_| ::pina::ProgramError::InvalidInstructionData)
    }
    /// Initialize caller-owned storage and return its mutable zero-copy view.
    ///
    /// The complete slice is initialized before zeropod validates it. The
    /// returned borrow prevents the caller from observing or changing the raw
    /// bytes while the typed view is live.
    ///
    /// Every non-discriminator field must accept an all-zero representation.
    /// In particular, an enum stored directly in this schema needs a variant
    /// with discriminant zero. Schemas without a valid zero state return the
    /// generated invalid-data error instead of exposing an unvalidated view.
    ///
    /// # Errors
    ///
    /// Returns the generated invalid-data error when `data` has the wrong
    /// length or zeroed storage is not a valid zeropod representation.
    pub fn initialize(
        data: &mut [u8],
    ) -> Result<&mut <Self as ::pina::ZeroPodFixed>::Zc, ::pina::ProgramError> {
        if data.len() != Self::SIZE {
            return Err(::pina::ProgramError::InvalidInstructionData);
        }
        data.fill(0);
        <Self as ::pina::HasDiscriminator>::write_discriminator(data);
        <Self as ::pina::ZeroPodFixed>::from_bytes_mut(data)
            .map_err(|_| ::pina::ProgramError::InvalidInstructionData)
    }
}
impl ::pina::HasDiscriminator for InitializeEvent {
    type Type = EventKind;
    const VALUE: Self::Type = EventKind::Init;
}
