crates/pina_macros/src/snapshots/pina_macros__tests__instruction_many_fields.snap
---
source: crates/pina_macros/src/tests.rs
expression: output
---
#[derive(::pina::zeropod::ZeroPod)]
pub struct FlipBit {
    discriminator: [u8; MyInstruction::BYTES],
    pub section_index: u8,
    pub array_index: u8,
    pub offset: u8,
    pub value: u8,
}
impl FlipBit {
    /// The exact number of bytes required by the zeropod representation.
    pub const SIZE: usize = <Self as ::pina::ZeroPodFixed>::SIZE;
    /// Validate `data` and return zeropod's immutable zero-copy companion.
    pub fn try_from_bytes(
        data: &[u8],
    ) -> Result<&<Self as ::pina::ZeroPodFixed>::Zc, ::pina::ProgramError> {
        if data.len() != Self::SIZE
            || !<Self as ::pina::HasDiscriminator>::matches_discriminator(data)
        {
            return Err(::pina::ProgramError::InvalidInstructionData);
        }
        <Self as ::pina::ZeroPodFixed>::from_bytes(data)
            .map_err(|_| ::pina::ProgramError::InvalidInstructionData)
    }
    /// Initialize caller-owned storage and return its mutable zero-copy view.
    ///
    /// The complete slice is initialized before zeropod validates it. The
    /// returned borrow prevents the caller from observing or changing the raw
    /// bytes while the typed view is live.
    pub fn initialize(
        data: &mut [u8],
    ) -> Result<&mut <Self as ::pina::ZeroPodFixed>::Zc, ::pina::ProgramError> {
        if data.len() != Self::SIZE {
            return Err(::pina::ProgramError::InvalidInstructionData);
        }
        data.fill(0);
        <Self as ::pina::HasDiscriminator>::write_discriminator(data);
        <Self as ::pina::ZeroPodFixed>::from_bytes_mut(data)
            .map_err(|_| ::pina::ProgramError::InvalidInstructionData)
    }
}
impl ::pina::HasDiscriminator for FlipBit {
    type Type = MyInstruction;
    const VALUE: Self::Type = MyInstruction::FlipBit;
}
