crates/pina_macros/src/snapshots/pina_macros__tests__instruction_minimal.snap
---
source: crates/pina_macros/src/tests.rs
expression: output
---
#[repr(C)]
#[derive(
    ::pina::TypedBuilder,
    ::core::clone::Clone,
    ::core::marker::Copy,
    ::core::cmp::PartialEq,
    ::core::cmp::Eq,
    ::core::fmt::Debug
)]
#[builder(builder_method(vis = "", name = __builder))]
pub struct Initialize {
    discriminator: [u8; MyInstruction::BYTES],
}
#[allow(dead_code)]
type InitializeBuilderType = InitializeBuilder<(([u8; MyInstruction::BYTES],),)>;
const __INITIALIZE_ALIGNMENT_ASSERTIONS__: () = {
    ::core::assert!(
        ::core::mem::align_of:: < [u8; MyInstruction::BYTES] > () == 1,
        concat!("The alignment of field `", "discriminator", "` with type `",
        stringify!([u8; MyInstruction::BYTES]),
        "` should be one. Consider using one of the exported `Pod*` types from the `pina` crate.")
    );
    ::core::assert!(
        ::core::mem::align_of:: < Initialize > () == 1,
        concat!("The alignment of struct `", stringify!(Initialize),
        "` should be one so it can be used for zero-copy casts.")
    );
    ::core::assert!(
        ::core::mem::size_of:: < Initialize > () == (0usize + ::core::mem::size_of:: <
        [u8; MyInstruction::BYTES] > ()), concat!("`", stringify!(Initialize),
        "` layout is padded. `#[pina]` discriminator-first zero-copy layouts must be tightly packed.")
    );
};
impl Initialize {
    pub fn to_bytes(&self) -> <Self as ::pina::PinaToBytes>::Bytes {
        <Self as ::pina::PinaToBytes>::to_bytes(self)
    }
    pub fn try_from_bytes(data: &[u8]) -> Result<&Self, ::pina::ProgramError> {
        if data.len() != ::core::mem::size_of::<Self>() {
            return Err(::pina::ProgramError::InvalidInstructionData);
        }
        <Self as ::pina::ZeroPodFixed>::from_bytes(data)
            .map_err(|_| ::pina::ProgramError::InvalidInstructionData)
    }
    pub fn builder() -> InitializeBuilderType {
        let mut bytes = [0u8; MyInstruction::BYTES];
        <Self as ::pina::HasDiscriminator>::VALUE.write_discriminator(&mut bytes);
        Self::__builder().discriminator(bytes)
    }
}
impl ::pina::HasDiscriminator for Initialize {
    type Type = MyInstruction;
    const VALUE: Self::Type = MyInstruction::Initialize;
}
const _: fn() = || {
    fn assert_zc_elem<T: ::pina::ZcElem>() {}
    assert_zc_elem::<[u8; MyInstruction::BYTES]>();
};
impl ::pina::PinaSerialize for Initialize {
    fn write_bytes(&self, output: &mut [u8]) {
        ::core::assert!(output.len() == ::core::mem::size_of:: < Self > ());
        output.fill(0);
        let mut offset = 0usize;
        let field_size = ::core::mem::size_of::<[u8; MyInstruction::BYTES]>();
        <[u8; MyInstruction::BYTES] as ::pina::PinaSerialize>::write_bytes(
            &self.discriminator,
            &mut output[offset..offset + field_size],
        );
        offset += field_size;
        ::core::debug_assert!(offset == output.len());
    }
}
impl ::pina::PinaToBytes for Initialize {
    type Bytes = [u8; ::core::mem::size_of::<Initialize>()];
    fn zeroed_bytes() -> Self::Bytes {
        [0u8; ::core::mem::size_of::<Initialize>()]
    }
}
impl ::pina::ZcValidate for Initialize {
    fn validate_ref(value: &Self) -> Result<(), ::pina::ZeroPodError> {
        <[u8; MyInstruction::BYTES] as ::pina::ZcValidate>::validate_ref(
            &value.discriminator,
        )?;
        Ok(())
    }
}
#[allow(unsafe_code)]
unsafe impl ::pina::ZcElem for Initialize {}
impl ::pina::ZeroPodSchema for Initialize {
    const LAYOUT: ::pina::LayoutKind = ::pina::LayoutKind::Fixed;
}
impl ::pina::ZeroPodFixed for Initialize {
    type Zc = Initialize;
    const SIZE: usize = ::core::mem::size_of::<Initialize>();
    fn from_bytes(data: &[u8]) -> Result<&Self::Zc, ::pina::ZeroPodError> {
        <Self as ::pina::ZeroPodFixed>::validate(data)?;
        Ok(unsafe { &*(data.as_ptr() as *const Self::Zc) })
    }
    fn from_bytes_mut(data: &mut [u8]) -> Result<&mut Self::Zc, ::pina::ZeroPodError> {
        <Self as ::pina::ZeroPodFixed>::validate(data)?;
        Ok(unsafe { &mut *(data.as_mut_ptr() as *mut Self::Zc) })
    }
    fn validate(data: &[u8]) -> Result<(), ::pina::ZeroPodError> {
        if data.len() < Self::SIZE {
            return Err(::pina::ZeroPodError::BufferTooSmall);
        }
        let zc = unsafe { &*(data.as_ptr() as *const Self::Zc) };
        <Self::Zc as ::pina::ZcValidate>::validate_ref(zc)?;
        Ok(())
    }
    unsafe fn from_bytes_unchecked(data: &[u8]) -> &Self::Zc {
        &*(data.as_ptr() as *const Self::Zc)
    }
    unsafe fn from_bytes_mut_unchecked(data: &mut [u8]) -> &mut Self::Zc {
        &mut *(data.as_mut_ptr() as *mut Self::Zc)
    }
}
impl ::pina::ZcField for Initialize {
    type Pod = Initialize;
    const POD_SIZE: usize = ::core::mem::size_of::<Initialize>();
}
