crates/pina_macros/src/snapshots/pina_macros__tests__instruction_with_array_and_pod.snap
---
source: crates/pina_macros/src/tests.rs
expression: output
---
#[repr(C)]
#[derive(
    ::pina::TypedBuilder,
    ::core::clone::Clone,
    ::core::marker::Copy,
    ::core::cmp::PartialEq,
    ::core::cmp::Eq,
    ::core::fmt::Debug
)]
#[builder(builder_method(vis = "", name = __builder))]
pub struct ComplexInstruction {
    discriminator: [u8; MyInstruction::BYTES],
    pub seed: [u8; 32],
    pub amount: PodU64,
    pub bump: u8,
    pub flags: [u8; 4],
}
#[allow(dead_code)]
type ComplexInstructionBuilderType = ComplexInstructionBuilder<
    (([u8; MyInstruction::BYTES],), (), (), (), ()),
>;
const __COMPLEXINSTRUCTION_ALIGNMENT_ASSERTIONS__: () = {
    ::core::assert!(
        ::core::mem::align_of:: < [u8; MyInstruction::BYTES] > () == 1,
        concat!("The alignment of field `", "discriminator", "` with type `",
        stringify!([u8; MyInstruction::BYTES]),
        "` should be one. Consider using one of the exported `Pod*` types from the `pina` crate.")
    );
    ::core::assert!(
        ::core::mem::align_of:: < [u8; 32] > () == 1, concat!("The alignment of field `",
        "seed", "` with type `", stringify!([u8; 32]),
        "` should be one. Consider using one of the exported `Pod*` types from the `pina` crate.")
    );
    ::core::assert!(
        ::core::mem::align_of:: < PodU64 > () == 1, concat!("The alignment of field `",
        "amount", "` with type `", stringify!(PodU64),
        "` should be one. Consider using one of the exported `Pod*` types from the `pina` crate.")
    );
    ::core::assert!(
        ::core::mem::align_of:: < u8 > () == 1, concat!("The alignment of field `",
        "bump", "` with type `", stringify!(u8),
        "` should be one. Consider using one of the exported `Pod*` types from the `pina` crate.")
    );
    ::core::assert!(
        ::core::mem::align_of:: < [u8; 4] > () == 1, concat!("The alignment of field `",
        "flags", "` with type `", stringify!([u8; 4]),
        "` should be one. Consider using one of the exported `Pod*` types from the `pina` crate.")
    );
    ::core::assert!(
        ::core::mem::align_of:: < ComplexInstruction > () == 1,
        concat!("The alignment of struct `", stringify!(ComplexInstruction),
        "` should be one so it can be used for zero-copy Pod casts.")
    );
    ::core::assert!(
        ::core::mem::size_of:: < ComplexInstruction > () == (0usize +
        ::core::mem::size_of:: < [u8; MyInstruction::BYTES] > () + ::core::mem::size_of::
        < [u8; 32] > () + ::core::mem::size_of:: < PodU64 > () + ::core::mem::size_of:: <
        u8 > () + ::core::mem::size_of:: < [u8; 4] > ()), concat!("`",
        stringify!(ComplexInstruction),
        "` layout is padded. `#[pina]` discriminator-first POD layouts must be tightly packed.")
    );
};
impl ComplexInstruction {
    #[allow(unsafe_code)]
    pub fn to_bytes(&self) -> &[u8] {
        unsafe {
            ::core::slice::from_raw_parts(
                self as *const Self as *const u8,
                ::core::mem::size_of::<Self>(),
            )
        }
    }
    pub fn try_from_bytes(data: &[u8]) -> Result<&Self, ::pina::ProgramError> {
        if data.len() != ::core::mem::size_of::<Self>() {
            return Err(::pina::ProgramError::InvalidInstructionData);
        }
        <Self as ::pina::ZeroPodFixed>::from_bytes(data)
            .map_err(|_| ::pina::ProgramError::InvalidInstructionData)
    }
    pub fn builder() -> ComplexInstructionBuilderType {
        let mut bytes = [0u8; MyInstruction::BYTES];
        <Self as ::pina::HasDiscriminator>::VALUE.write_discriminator(&mut bytes);
        Self::__builder().discriminator(bytes)
    }
}
impl ::pina::HasDiscriminator for ComplexInstruction {
    type Type = MyInstruction;
    const VALUE: Self::Type = MyInstruction::ComplexInstruction;
}
impl ::pina::ZcValidate for ComplexInstruction {
    fn validate_ref(value: &Self) -> Result<(), ::pina::ZeroPodError> {
        <[u8; MyInstruction::BYTES] as ::pina::ZcValidate>::validate_ref(
            &value.discriminator,
        )?;
        <[u8; 32] as ::pina::ZcValidate>::validate_ref(&value.seed)?;
        <PodU64 as ::pina::ZcValidate>::validate_ref(&value.amount)?;
        <u8 as ::pina::ZcValidate>::validate_ref(&value.bump)?;
        <[u8; 4] as ::pina::ZcValidate>::validate_ref(&value.flags)?;
        Ok(())
    }
}
#[allow(unsafe_code)]
unsafe impl ::pina::ZcElem for ComplexInstruction {}
impl ::pina::ZeroPodSchema for ComplexInstruction {
    const LAYOUT: ::pina::LayoutKind = ::pina::LayoutKind::Fixed;
}
impl ::pina::ZeroPodFixed for ComplexInstruction {
    type Zc = ComplexInstruction;
    const SIZE: usize = ::core::mem::size_of::<ComplexInstruction>();
    fn from_bytes(data: &[u8]) -> Result<&Self::Zc, ::pina::ZeroPodError> {
        <Self as ::pina::ZeroPodFixed>::validate(data)?;
        Ok(unsafe { &*(data.as_ptr() as *const Self::Zc) })
    }
    fn from_bytes_mut(data: &mut [u8]) -> Result<&mut Self::Zc, ::pina::ZeroPodError> {
        <Self as ::pina::ZeroPodFixed>::validate(data)?;
        Ok(unsafe { &mut *(data.as_mut_ptr() as *mut Self::Zc) })
    }
    fn validate(data: &[u8]) -> Result<(), ::pina::ZeroPodError> {
        if data.len() < Self::SIZE {
            return Err(::pina::ZeroPodError::BufferTooSmall);
        }
        let zc = unsafe { &*(data.as_ptr() as *const Self::Zc) };
        <Self::Zc as ::pina::ZcValidate>::validate_ref(zc)?;
        Ok(())
    }
    unsafe fn from_bytes_unchecked(data: &[u8]) -> &Self::Zc {
        &*(data.as_ptr() as *const Self::Zc)
    }
    unsafe fn from_bytes_mut_unchecked(data: &mut [u8]) -> &mut Self::Zc {
        &mut *(data.as_mut_ptr() as *mut Self::Zc)
    }
}
impl ::pina::ZcField for ComplexInstruction {
    type Pod = ComplexInstruction;
    const POD_SIZE: usize = ::core::mem::size_of::<ComplexInstruction>();
}
